dreamkast-ui/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dreamkast-ui
  name: dreamkast-ui
  namespace: dreamkast
spec:
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: dreamkast-ui
  type: NodePort
