dreamkast-ui/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dreamkast-ui-ingress
  namespace: dreamkast
  annotations:
    kubernetes.io/ingress.class: contour
  labels:
    app: dreamkast-ui
spec:
  rules:
    - host: dreamkast-ui.dev.cloudnativedays.jp
      http:
        paths:
          - path: /
            backend:
              serviceName: "dreamkast-ui"
              servicePort: 3001
